--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 img {
-    display: block;
-    margin: 15px;
-    width: 600px;
-    max-width: 100%;
+  display: block;
+  margin: 15px;
+  width: 600px;
+  max-width: 100%;
 }
 
 body {
-	background:#858282;
+  background: #858282;
+}
+
+p {
+  color: #fff;
+  font-size: 59px;
 }
