--- a/mems/css/style.css
+++ b/mems/css/style.css
@@ -1,9 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Inter:wght@300&family=Press+Start+2P&display=swap");
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 32px;
+}
+
+.card-full {
+  background-color: #faff00;
+  padding: 48px;
+}
+
+.card-full__img {
+  width: 100%;
+}
+
+.card-full__about {
+  font-family: "Press Start 2P", sans-serif;
+  font-size: 40px;
+}
+
+.card-info__title {
+  font-size: 50px;
+  font-weight: 100;
+}
+
+.card-info__content {
+  display: flex;
+  gap: 32px;
+}
+
+.card-info__info {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.card-info__small-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 :root {
   --black: #121723;
   --header-height: 110px;
   --footer-height: 142px;
+}
+
+html {
+  font-size: 23px;
 }
 
 body {
@@ -22,6 +68,10 @@ h1 {
   margin: 0;
 }
 
+h3 {
+  font-weight: normal;
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -37,34 +87,35 @@ h1 {
 }
 
 .main {
-  background: linear-gradient(
-    166deg,
-    rgba(64, 180, 210, 1) 22%,
-    rgba(208, 88, 203, 1) 49%,
-    rgba(133, 69, 252, 1) 78%
-  );
+  padding-inline: 150px;
+  background: linear-gradient(166deg, rgb(64, 180, 210) 22%, rgb(208, 88, 203) 49%, rgb(133, 69, 252) 78%);
+}
+
+.cards-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - var(--header-height) - var(--footer-height));
+  padding-block: 32px;
+  gap: 24px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  width: 360px;
 }
 
 .card__about {
   background-color: #ffed00;
   font-family: "Press Start 2P", sans-serif;
-  font-size: 14px;
+  font-size: 23px;
   font-weight: 400;
   padding: 32px 24px;
   margin: 0;
 }
 
 .card__img {
+  height: 400px;
 }
 
 .footer {
@@ -79,16 +130,5 @@ h1 {
   font-size: 55px;
   font-weight: 400;
   height: var(--footer-height);
-}
-
-
-.card-full {
-
-}
-
-.card-full__img {
-	height: 728px;
-}
-
-.card-full__about {
+  opacity: 0.5;
 }
