--- a/mems/scss/style.scss
+++ b/mems/scss/style.scss
@@ -57,7 +57,7 @@ h3 {
 
 .cards-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: calc(100vh - var(--header-height) - var(--footer-height));
   padding-block: 32px;
@@ -67,6 +67,7 @@ h3 {
 .card {
   display: flex;
   flex-direction: column;
+  max-width: 650px;
 }
 
 .card__about {
@@ -79,7 +80,6 @@ h3 {
 }
 
 .card__img {
-	height: 400px;
 }
 
 .footer {
