--- a/mems/style.css
+++ b/mems/style.css
@@ -70,3 +70,71 @@
     font-family: "Amatic SC";
     align-items: center;
 }
+
+
+
+.container__main {
+    background: linear-gradient(315deg, rgb(133, 37, 144), rgb(224, 231, 229));
+}
+
+.container__detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FAFF00;
+    width: 50%;
+
+}
+
+.container__detail img {
+    width: 90%;
+    padding: 50px 0px;
+}
+
+.detail__main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.detail__text {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap: 32px;
+}
+
+.description {
+    display: flex;
+    justify-content: space-between;
+    font-family: "Inter";
+    color: black;
+    font-size: 17px;
+    padding: 10px 0px;
+    gap: 10px;
+    width: 90%
+}
+
+
+.description .description__first, .description .description__second {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.row {
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+    text-align: right;
+}
+
+
+.detail__text h1 {
+    font-family: "press start 2p"
+}
+
+.detail__text p {
+    font-family: "Inter";
+    font-size: 30px;
+}
