--- a/Вебинар_11/style.css
+++ b/Вебинар_11/style.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap");
+
 .container__cards {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+
   display: grid;
   grid-template: auto / repeat(3, 1fr);
   gap: 25px;
@@ -8,11 +13,17 @@
   padding: 50px 100px;
 
   background: linear-gradient(
-    165deg,
-    rgba(64, 210, 142, 1) 25%,
-    rgba(83, 96, 159, 1) 50%,
-    rgba(144, 109, 26, 1) 75%
+    150deg,
+    rgba(64, 210, 142, 1) 20%,
+    rgba(83, 96, 159, 1) 40%,
+    rgba(144, 34, 26, 1) 60%,
+    rgba(144, 109, 26, 1) 80%
   );
+}
+
+.title {
+  margin: 0;
+  padding: 0;
 }
 
 .card {
