--- a/Вебинар_11/style.css
+++ b/Вебинар_11/style.css
@@ -44,6 +44,9 @@
 	.card h3 {
 		font-size: .9em;
 	}
+	.card h4 {
+		font-size: .8em;
+	}
 }
 
 @media (width <= 768px) {
@@ -58,8 +61,15 @@
 }
 
 @media (width <= 600px) {
+	.card {
+		padding: 10px;
+	}
+
 	.card h3 {
 		font-size: 0.8em;
+	}
+	.card h4 {
+		font-size: .7em;
 	}
 }
 
@@ -74,5 +84,8 @@
 
 	.card h3 {
 		font-size: 1.2em;
+	}
+	.card h4 {
+		font-size: 1.1em;
 	}
 }
