--- a/Вебинар_11/style.css
+++ b/Вебинар_11/style.css
@@ -10,6 +10,7 @@ body{
     font-family: "Anonymous Pro", sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
 }
 @font-face {
     font-family: "Anonymous Pro", sans-serif;
