--- a/Вебинар_11/style.css
+++ b/Вебинар_11/style.css
@@ -4,6 +4,7 @@
     justify-content: center;
     gap: 10px;
     margin: 10px auto;
+    cursor: pointer;
 }
 body{
     background: linear-gradient(orange ,pink) fixed;
@@ -91,3 +92,7 @@ hr {
     justify-content: center;
 }
 
+.button_search {
+cursor: pointer;
+
+}
