--- a/Вебинар_12/Исходник/веб_3_12/style.css
+++ b/Вебинар_12/Исходник/веб_3_12/style.css
@@ -35,6 +35,7 @@
 
 .card-full__img {
   width: 100%;
+  border-radius: 12px;
 }
 
 .card-full__info {
@@ -46,6 +47,7 @@
 .card-full__title {
   font-size: 48px;
   font-weight: 400;
+  margin-block: 15px;
 }
 
 .card-full__subtitle {
