--- a/Вебинар_12/Исходник/веб_4_12/style.css
+++ b/Вебинар_12/Исходник/веб_4_12/style.css
@@ -1,142 +1,293 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
+/* подключение локальный шрифтов на страницу */
+@font-face {
+    font-family: "Anonymous Pro";
+    src: url(fonts/AnonymousPro-Regular.ttf);
+    font-weight: 400;
+    font-style: normal;
+    display: swap;
 }
 
-.container {
+@font-face {
+    font-family: "Anonymous Pro";
+    src: url(fonts/AnonymousPro-Bold.ttf);
+    font-weight: 700;
+    font-style: normal;
+    display: swap;
+}
+a{
+    text-decoration: none;
+    color: #000000;
+}
+* {
+    box-sizing: border-box;
+}
+
+/* сброс стилей по умолчанию */
+body,h1,h2,h3,p,ul,li {
+    margin: 0;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+a {
+    text-decoration: none;
+}
+
+/* задание шрифта всей странице */
+body {
+    font-family: "Anonymous Pro", sans-serif;
+}
+
+/* стили для главного контейнера */
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
-    min-height: 100vh;
+    background: #F1F1F1;
 }
 
-
-.container__header {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  background-color: #FF3DFE;  
-  height: 109px;
-  align-items: center;
+/* стили для хедера(шапки) сайта */
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-bottom: 1px solid #A1A6B4;
+    background: white;
 }
 
-.container__header p {
-    font-size: 77px;
-    font-family: "Amatic SC";
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1140px;
+    margin: 24px 0 24px;
 }
 
-.container__cards {
+.logo-link {
+    max-width: 215px;
+}
+
+/* стили для ссылок в хедере и футере */
+nav {
+    display: flex;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 24px;
+}
+
+.nav-item {
+    display: inline;
+}
+
+.nav-link {
+    color: #121723;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+/* стили для  */
+.content {
+    margin: 32px 0;
+    max-width: 1140px;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+/* стили для контейнера кроссовок */
+.sneakers {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 24px;
-    align-items: center;
-    flex-grow: 1;
+    margin: 32px 0 0;
 }
 
-.card {
+/* стили для карточки кроссовок */
+.sneaker {
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 364px;
-    max-height: 346px;
-    background-color: #24FF00; 
-    transition-duration: 2s;
+    height: 100%;
+    border-radius: 12px;
+    background: white;
 }
 
-.card__text {
-    font-family: "press start 2p";
-    font-size: 14px;
+.sneaker-image {
+    width: 100%;
+}
+
+.sneaker-info {
     display: flex;
-    align-items: center;
-    width: 95%;
-    max-width: 323px;
-    height: 92px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    width: 100%;
+    padding: 32px 24px;
 }
 
-.container__footer {
+h3 {
+    font-size: 26px;
+}
+
+p {
+    font-size: 20px;
+}
+
+footer {
     width: 100%;
     display: flex;
-    justify-content: center;
-    background-color: black;
+    flex-direction: column;
+    align-items: center;
+    background: #121723;
+}
+
+/* стили для футера */
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1140px;
+    margin: 32px 0;
+}
+
+.footer__logo-link {
+    max-width: 300px;
+    width: 100%;
+}
+
+footer .nav-link {
     color: white;
-    height: 142px;
-    font-size: 77px;
-    font-family: "Amatic SC";
-    align-items: center;
 }
 
-
-
-.container__main {
-    background: linear-gradient(315deg, rgb(133, 37, 144), rgb(224, 231, 229));
-}
-
-.container__detail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #FAFF00;
-    width: 50%;
-
-}
-
-.container__detail img {
-    width: 90%;
-    padding: 50px 0px;
-}
-
-.detail__main {
+.copyright {
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 1140px;
+    border-top: 1px solid #A1A6B4;
 }
 
-
-.detail__text {
+.copyright-text {
+    color: #A1A6B4;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 24px 0;
+}
+/* доп страницы */
+.div{
+    width: 1140px;
+}
+.content__field{
     display: flex;
+    width: 1144px;
+    height: 1700px;
+    padding: 48px;
+    margin: 32px 0;
+    border-radius: 50px;
     flex-direction: column;
-    width: 90%;
+    align-items: flex-start;
+    background-color: cadetblue;
+}
+.sneaker-image1{
+    width: 1044px;
+    height: 600px;
+    
+}
+.card__second{
+    height: 600px;
+    width: 1044px;
+    align-self: stretch;
+    border-radius: 50px 50px 0px 0px;
+    justify-content: center;
+}
+.all__title{
+    height: 42px;
+    padding: 0 0 32px 0;
     gap: 32px;
 }
+.big__title{
+    font-size: 48px;
+    color: #121723;
+    font-family: Anonymous Pro;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    background-color: aqua;
 
-.description {
+}
+.sub__title{
+    color: #121723;
+    font-family: Anonymous Pro;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    font-size: 36px;
+    background-color: pink;
+
+}
+.info{
+    display: flex;
+    width: 1044px;
+    height: 108px;
+    margin: 32px 0px 0px 0px;
+    /* padding: 32px; */
+    gap: 24px;
+    flex-direction: column;
+}
+.description{
+    margin: 24px 0px 0px 0px;
     display: flex;
     justify-content: space-between;
-    font-family: "Inter";
-    color: black;
-    font-size: 17px;
-    padding: 10px 0px;
-    gap: 10px;
-    width: 90%
+    gap: 32px;
 }
-
-
-.description .description__first, .description .description__second {
-    flex-grow: 1;
-    flex-basis: 0;
+.left{
+    display: flex;
+    width: 506px;
+    height: 840px;
+    background-color: aliceblue;
+    
 }
-
-.row {
-    display:flex;
+.left__text{
+    display: flex;
+    padding: 30px;
+    gap: 30px;
+    flex-direction: column;
+    font-size: 20px;
+}
+.right{
+    
+    width: 506px;
+    height: 258px;
+    background-color: burlywood;
+}
+.right__column{
+    display: flex;
     justify-content: space-between;
-    width: 100%;
-    text-align: right;
+    height: 45px;
+    width: 506px;
+    flex-direction: column;
 }
-
-
-.detail__text h1 {
-    font-family: "press start 2p"
+.mini-column{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid #000000;
+    padding: 24px 0px;
+    font-size: 20px;
+    align-items: center;  
 }
-
-.detail__text p {
-    font-family: "Inter";
+.first__item{
+    padding: 0 0 20px 0;
     font-size: 30px;
+    border-bottom: 1px solid #000000;
 }
-
