--- a/Module II/Вебинар_5/Пример №2/style.css
+++ b/Module II/Вебинар_5/Пример №2/style.css
@@ -12,7 +12,9 @@ body{
     padding: 32px 0;
 }
 #wordsContainer{
-    display: flex;
+    display: grid;
+	grid-template: auto / repeat(8, 1fr);
+
     gap: 32px;
 
     font-family: sans-serif;
@@ -21,9 +23,7 @@ body{
 
 #wordsContainer > div{
     padding: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;    
+    display: grid;
     gap: 8px;
 
     color: #00ADB5;
