--- a/Module II/Вебинар_4/Example/style.css
+++ b/Module II/Вебинар_4/Example/style.css
@@ -20,3 +20,7 @@ input:hover {
     box-shadow: 5px 5px rgb(185, 185, 185);
     transition-duration: 0.5s;
 }
+
+.example-class {
+    background-color: aqua;
+}
